[package]
name = "ble_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "*"
uuid = "*"
tokio = { version = "1", features = ["full"] }
futures ="*"

[[bin]]
name = "ble_server"
path = "main.rs"
